--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -167,9 +167,9 @@
             <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_right_over_60_60.svg" alt="">
           </div>
           <div class="gallery">
-            <div class="gallery_item">
+            <div class="item">
               <div class="thumbnail" >
-                <a href="">
+                <a id="test" href="">
                   <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
                 </a>
               </div>
@@ -184,93 +184,7 @@
                 </div>
               </div>
             </div>
-            <div class="gallery_item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-        
-            <div class="gallery_item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-            <div class="gallery_item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="promotion">
-        <div id="section_title">
-          <h2>이 상품 어때요?</h2>
-        </div>
-        
-        <div class="gallery_wrap">
-          <div class="section_left_btn">
-            <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_left_60_60.svg" alt="">
-          </div>
-          <div class="section_right_btn">
-            <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_right_over_60_60.svg" alt="">
-          </div>
-          <div class="gallery">
-            <div class="gallery_item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-            <div class="gallery_item">
+            <div class="item">
               <div class="thumbnail" >
                 <a href="">
                   <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
@@ -288,7 +202,7 @@
               </div>
             </div>
         
-            <div class="gallery_item">
+            <div class="item">
               <div class="thumbnail" >
                 <a href="">
                   <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
@@ -305,93 +219,7 @@
                 </div>
               </div>
             </div>
-            <div class="gallery_item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="promotion">
-        <div id="section_title">
-          <h2>이 상품 어때요?</h2>
-        </div>
-        
-        <div class="gallery_wrap">
-          <div class="section_left_btn">
-            <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_left_60_60.svg" alt="">
-          </div>
-          <div class="section_right_btn">
-            <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_right_over_60_60.svg" alt="">
-          </div>
-          <div class="gallery">
-            <div class="gallery_item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-            <div class="gallery_item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-        
-            <div class="gallery_item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-            <div class="gallery_item">
+            <div class="item">
               <div class="thumbnail" >
                 <a href="">
                   <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
@@ -462,7 +290,7 @@
       </div>
     </footer>
     <!-- <script src="imageSlider.js"></script> -->
-    <!-- <script src="../product.js"></script> -->
+    <script src="home.js" type="module"></script>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
