--- a/src/views/meat/meat.html
+++ b/src/views/meat/meat.html
@@ -177,6 +177,6 @@
       </div>
     </footer>
     
-    <script src="../../product.js"></script>
+    <script src="../../product.js" type="module"></script>
 </body>
 </html>
