--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -191,7 +191,7 @@
       </div>
 
     </section>
-    <script src="product-detail.js"></script>
+    <script src="product-detail.js" type="module"></script>
 
 
 
