--- a/src/views/product-detail/product-detail.css
+++ b/src/views/product-detail/product-detail.css
@@ -242,7 +242,7 @@ section.container {
   min-height: 700px;
   height: auto;
   margin: 0 auto;
-  margin-top: 5rem;
+  margin-top: 20px;
   padding: 0px;
 }
 
