--- a/src/views/user-info-manage/user-info-manage.css
+++ b/src/views/user-info-manage/user-info-manage.css
@@ -1,4 +1,8 @@
-.register-user-form-container {
+*{
+  box-sizing: border-box;
+}
+
+.register-user-form-container { 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -31,14 +35,19 @@
 .address-btn-wrap{
   display: flex;
 }
-/* 왜 3:1의 비율이 안먹히는지 잘 모르겠음 */
-.address-btn-wrap:nth-child(1){
-  flex-grow: 3;
-}
-.address-btn-wrap:nth-child(2){
-  flex-grow: 1;
-}
 
+.address_btn_items2{
+  width: 180px;
+  margin-right: 6px;
+  margin-left: 6px;
+}
+.address_btn_items4{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.address_btn_items5{
+  margin-right: 6px;
+}
 .address-detail-wrap{
   display: flex;
 }
@@ -50,3 +59,74 @@
 .input-email-ex2{
   flex-grow: 1;
 }
+
+/* checkbox slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 68px;
+  height: 34px;
+}
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 24px;
+  width: 24px;
+  left: 4px;
+  bottom: 5px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+#fullNameInput, 
+#passwordInput,
+#phoneNumberInput{
+  margin-right: 7px;
+}
+.withdraw_btn{
+  margin-top: 10px;
+}
+
+/* 우편번호 */
