--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,6 +1,11 @@
 * {
   margin:0;
   padding:0;
+  
+}
+#header, .navbar, body {
+  background-color: rgb(209,228,221) ;
+  /* background-color: rgb(167,204,190) ; */
 }
 ul, li {
   list-style:none;
@@ -14,12 +19,12 @@ ul, li {
 #navbar_menu {
   display: flex;
   justify-content: center;
-  ;
 }
 .sticky {
   position: sticky;
   top: 0px;
-  background-color: white;
+  background-color: rgb(209,228,221) ;
+  /* background-color: rgb(167,204,190) ; */
   z-index: 2;
 }
 .menu_main a {
@@ -108,7 +113,7 @@ ul, li {
 .right_arrow {
   position: absolute;
   top: 150px;
-  right: 250px;
+  right: 260px;
   background-color: transparent;
   width: 52px;
   height: 52px;
@@ -176,7 +181,7 @@ section {
 }
 .gallery_wrap .section_left_btn {
   position: absolute;
-  left:-30px;
+  left:-45px;
   top:135px;
   z-index: 300;
   /* opacity: 0.6; */
@@ -184,7 +189,7 @@ section {
 }
 .gallery_wrap .section_right_btn {
   position: absolute;
-  right:-30px;
+  right:-45px;
   top:135px;
   z-index: 300;
   /* opacity: 0.6; */
@@ -195,9 +200,14 @@ section {
   justify-content: center;
   /* background-color: yellow; */
 }
-.gallery_item{
+.item{
   position: relative;
-  padding: 0 9px;
+  padding: 0;
+  margin: 0 9px;
+  border: solid 3px #333;
+  border-radius: 5%;
+  box-shadow: 5px 5px 5px gray;
+  background-color: white
 }
 
 .shopping_cart {
@@ -213,6 +223,7 @@ section {
 .shopping_cart_icon img {
   height: 55px;
   width: 55px;
+  transition: all .2s ease-in-out
 }
 .shopping_cart_icon img:hover {
   cursor: pointer;
@@ -223,6 +234,10 @@ section {
   width: 250px;
   height: 320px;
   overflow: hidden;
+  border-bottom: solid 3px #333;
+  /* border: solid 3px #333;
+  border-radius: 5%;
+  box-shadow: 5px 5px 5px gray; */
 }
 
 .thumbnail a {
@@ -232,15 +247,19 @@ section {
   height: 100%;
   width: 100%;
   transition: all .3s ease-in-out;
+  
+  /* box-shadow: 10px 5px 5px gray; */
   /* width: 500px; */
 }
 .thumbnail img:hover {
   transform: scale(1.1);
+
 }
 
 .description {
-  /* margin: 0 0 8px 0;   */
   padding: 14px 10px 0 0;
+  text-align: center;
+  
 }
 .description_text {
   font-size: 16px;
@@ -367,4 +386,39 @@ section {
   font-size: 12px;
   padding-bottom: 6px;
   white-space: nowrap;
+}
+
+
+/* swiper css */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* background-color: red; */
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
