--- a/src/views/meat/meat.html
+++ b/src/views/meat/meat.html
@@ -24,34 +24,10 @@
     ></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="../../product.css" />
-    <!-- <script src="home.js" type="module" defer></script> -->
   </head>
 
 <body>
-    <!-- <p id="demo"></p>
-    <script type="text/javascript">
-      let xhttp = new XMLHttpRequest();
-      xhttp.onreadystatechange = function() {
-        if(xhttp.readyState == 4 && xhttp.status == 200){
-		      jsonfunc(this.responseText); 
-        }
-      } 
-      xhttp.open('GET', 'product.json', true);
-      xhttp.send();
-      function jsonfunc(jsontext){
-        let json = JSON.parse(jsontext);
-        let txt = '';
-        for(i=0; i<json.length; i++){
-		      for(key in json[i]){ // key값 가져오기
-		      	txt += key + ":" + json[i][key]; 
-		      }
-	      	txt += "<br>";
-      	} 
-	      const x = document.getElementById('demo');
-        x.innerHTML = txt;
-        
-      }
-    </script> -->
+    <div id="category">meat</div>
     <div id="header">
         <nav class="navbar" role="navigation" aria-label="main navigation">
           <div class="container mt-3">
@@ -100,16 +76,16 @@
                 </a>
               </li>
               <li class="menu menu2">
-                <a href="/product/meat">고기</a>
+                <a id="meat">고기</a>
               </li>
               <li class="menu menu3">
-                <a href="/product/vegetable">채소</a>
+                <a id="vegetable">채소</a>
               </li>
               <li class="menu menu4">
-                <a href="/product/fruit">과일</a>
+                <a id="fruit">과일</a>
               </li>
               <li class="menu menu5">
-                <a href="/product/fish">생선</a>
+                <a id="fish">생선</a>
               </li>
             </ul>
           </div>
@@ -134,8 +110,8 @@
         <h1 class="title">고기</h1>
       </div>
       <div id="list_products">
-        <div class="inner_list_products">
-              <div class="item">
+        <div id="inner_list_products">
+              <!-- <div class="item">
                 <div class="thumbnail" >
                   <a href="">
                     <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
@@ -151,99 +127,10 @@
                     <span>원</span>
                   </div>
                 </div>
-              </div>
-              <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div>
-
-          </ul>
+              </div> -->
         </div>
       </div>
     </section>
-
-
     
       <!-- footer -->
     <footer class="footer">
@@ -289,5 +176,7 @@
   
       </div>
     </footer>
+    
+    <script src="../../product.js" type="module"></script>
 </body>
 </html>
