--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -116,7 +116,7 @@
           </div>
         </div>
         <button class="button is-primary is-fullwidth" id="submitButton">
-          주문하기
+          <a href="/pay" style="color:white">주문하기</a>
         </button>
       </form>
     </div>
