--- a/src/views/pay/pay.html
+++ b/src/views/pay/pay.html
@@ -124,7 +124,7 @@
         <div class="price-sum-wrap">
           <span class="cart-price-sum">0</span>원
         </div>
-        <button class="button is-primary is-fullwidth" id="submitButton">
+        <button class="button is-primary is-fullwidth" id="payButton">
           결제하기
         </button>
       </form>
