--- a/src/views/pay/pay.css
+++ b/src/views/pay/pay.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 120vh;
+  height: 85vh;
 }
 
 .register-user-form-box {
@@ -43,10 +43,17 @@
   display: flex;
 }
 
-/* 변경해도 바뀌지가 않음 */
 .input-email-ex1{
   flex-grow: 3;
 }
 .input-email-ex2{
   flex-grow: 1;
+}
+
+.price-sum-wrap{
+  text-align: right;
+}
+.cart-price-sum{
+  font-size: 25px;
+  font-weight: 700;
 }
