--- a/src/views/pay/pay.html
+++ b/src/views/pay/pay.html
@@ -29,7 +29,8 @@
     <!-- 카카오 OAuth -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="cart.css" />
+    <link rel="stylesheet" href="pay.css" />
+    
   </head>
   <body>
     <!-- 헤더 -->
@@ -40,6 +41,7 @@
             <img src="/elice-rabbit.png" width="30" height="30" />
             <span class="has-text-link">쇼핑-데모</span>
           </a>
+
           <a
             role="button"
             class="navbar-burger"
@@ -70,58 +72,63 @@
         </div>
       </div>
     </nav>
-
-    <!-- 장바구니 폼 -->
+    
+    <!-- 회원가입 폼(Form) -->
     <div class="register-user-form-container">
       <form 
         method="post"
         class="box register-user-form-box" 
         id="registerUserForm"
       >
-        <p class="title is-5 has-text-primary">장바구니</p>
+        <p class="title is-5 has-text-primary">결제 정보</p>
         <div class="field">
-          <label class="label" for="fullNameInput">상품리스트</label>
-          <div class="checkbox-select-wrap">
-            <div class="checkbox-select">
-              <span class="all-check">전체선택</span>
-                <span class="bar"></span>
-            </div>
-            <div>
-              <span class="select-check">선택삭제</span>
-            </div>
-          </div>
-          <hr class="hr-items-line">
-          <!-- 장바구니의 담겨져 있는 것 들을 전부다 이런 형식으로 담으면 된다. -->
-          <div class="cart-list">
-            <!-- <div class="cart-items-list">
-              <div class="cart-items-checkbox">
-                <input type="checkbox" name="" id="">
-              </div>
-              <div class="cart-items-img">
-                <img src="" alt="">
-              </div>
-              <div class="cart-items-content">
-                <p>브랜드 이름</p>
-                <p>상품 이름</p>
-                <div><span class="cart-items-price">100</span>원</div>
-              </div>
-              <div class="cart-items-btn">
-                <input type="text" value="1" class="cart-items-quantity-input" readonly>
-                <div class="cart-plus-minus-wrap">
-                  <input type="button" class="cart-btn-minus">
-                  <input type="button" class="cart-btn-plus">
-                </div>
-              </div>
-            </div> -->
+          <label class="label" for="fullNameInput">이름</label>
+          <div class="control">
+            <input
+              class="input"
+              id="fullNameInput"
+              type="text"
+              placeholder="유재석"
+              autocomplete="on"
+            />
           </div>
         </div>
-        <button class="button is-primary is-fullwidth" id="submitButton">
-          <a href="/pay" style="color:white">주문하기</a>
+        <div class="field">
+          <label class="label" for="fullNameInput">전화번호</label>
+          <div class="control">
+            <input
+              class="input"
+              id="phoneNumberInput"
+              type="text"
+              placeholder="전화번호"
+              autocomplete="on"
+            />
+          </div>
+        </div>
+
+        <div class="field mb-5 pay_address">
+          <label class="label" for="addressInput">주소</label>
+          <div class="address-control">
+            <div class="address-btn-wrap">
+              <input class="input" type="text" id="postcode" placeholder="우편번호">
+              <input class="input" type="button" onclick="daumPostCode()" value="우편번호 찾기"><br>
+            </div>
+            <input class="input" type="text" id="address" placeholder="주소"><br>
+            <div class="address-detail-wrap">
+              <input class="input" type="text" id="detailAddress" placeholder="상세주소">
+              <input class="input" type="text" id="extraAddress" placeholder="참고항목">
+            </div>
+          </div>
+        </div>
+        <hr class="hr-items-line">
+        <div class="price-sum-wrap">
+          <span class="cart-price-sum">0</span>원
+        </div>
+        <button class="button is-primary is-fullwidth" id="payButton">
+          결제하기
         </button>
       </form>
     </div>
   </body>
-  <script src="cartInit.js"></script>
-  <script src="cart.js"></script>
-  <script src="cart-test.js"></script>
+  <script src="pay.js"></script>
 </html>
