--- a/src/views/fruit/fruit.html
+++ b/src/views/fruit/fruit.html
@@ -24,7 +24,6 @@
     ></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="../../product.css" />
-    <script src="../../product.js"></script>
   </head>
 
 <body>
@@ -161,5 +160,7 @@
   
       </div>
     </footer>
+    
+    <script src="../../product.js" type="module"></script>
 </body>
 </html>
