--- a/src/views/vegetable/vegetable.html
+++ b/src/views/vegetable/vegetable.html
@@ -163,6 +163,6 @@
     </footer>
 
     
-    <script src="../../product.js"></script>
+    <script src="../../product.js" type="module"></script>
 </body>
 </html>
