--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -78,59 +78,165 @@ ul, li {
 }
 
 /* main */
-.div-container {
-  /* display: flex; */
-  /* align-items: center;
-  justify-content: center; */
-  /* height: 100vh; */
-  width: 100vw;
+
+/* 배너 슬라이드 시작 */
+.slides_wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 370px;
+  width: 100%;
+  /* overflow: hidden; */
+  object-fit: cover;
+  position: relative;
+  object-position: 20% 10%; 
+  margin: 0 auto;
+}
+.images {
+  height: 100%;
+  width: 100%;
+}
+.image {
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.image img {
+  height: 100%;
+  width: 100%;
+}
+.image1 {
+  background-image: url("https://images.unsplash.com/photo-1603048297172-c92544798d5a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+}
+.image2 {
+  background-image: url("https://images.unsplash.com/photo-1610348725531-843dff563e2c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHZlZ2V0YWJsZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
+}
+.image3 {
+  background-image: url("https://images.unsplash.com/photo-1610832958506-aa56368176cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8ZnJ1aXRzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
+}
+.image4 {
+  background-image: url("https://images.unsplash.com/photo-1535424921017-85119f91e5a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGZpc2glMjBmb29kfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
+}
+
+.btm_sliders {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.btm_sliders span {
+  height: 15px;
+  width: 50px;
+  border: 2px solid white;
+  border-radius: 25%;
+  margin: 0 5px;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+  /* background-color: white; */
+}
+
+.btm_sliders span:hover {
+  background-color: white;
+}
+
+.slides_wrap .slide {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 45px;
+  height: 45px;
+  border: 3px solid rgba(255,255,255,0.7);;
+  border-radius: 35%;
+}
+.slides_wrap .slide:hover{
+  background-color: rgba(255,255,255,0.3);
+}
+.slides_wrap .slide span {
+  font-size: 35px;
+  color: rgba(255,255,255,0.7);
+  line-height: 41px;
+  cursor: pointer;
+}
+.slides_wrap .left {
+  left: 10px;
+}
+.slides_wrap .right {
+  right: 10px;
+}
+
+/* 배너 슬라이드 끝 */
+
+/* .swiper {
+  width: 6000px;
+  height: 370px;
   padding: 0px;
   margin: 0px;
 }
 
-#slider_wrap {
+.slider_wrap {
   position: relative;
-  text-align: center;
-  border: 1px solid #f7f7f7;
-  padding-bottom: 120px;
-}
-#slider_wrap #slider .slide {
-  display: none;
-}
-#slider_wrap #slider .active {
+  width:100%;
+  height: 370px;
+  /* Center slide text vertically
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: block;
+  margin: auto;
+  align-items: center;
 }
-
-#slider_wrap #slider .slide img {
-  width: 100%;
+.slider_wrap .slide {
+  float:left;
+  width: 100vw;
   height: 370px;
 }
+.slider_wrap .slide img {
+  margin: 0 auto;
+  display: block;
+  width: 90%;
+  height: 370px;
+  object-fit: cover;
+  background-image: url("https://images.unsplash.com/photo-1623241899289-e9a64b02150d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8cmF3JTIwbWVhdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
+  background-position: center;
+  background-size: cover;
+} 
+*/
+/* 
 #temp {
   background-image: url("https://images.unsplash.com/photo-1592686092916-672fa9e86866?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470");
   background-position: center;
-  /* transform: scale(0.9); */
-}
+  transform: scale(0.9); 
+} */
+
 .right_arrow {
   position: absolute;
-  top: 150px;
-  right: 260px;
-  background-color: transparent;
   width: 52px;
   height: 52px;
+  /* top: 150px;
+  right: 260px;
+  background-color: transparent;
   border: none;
   background-image: url('https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_banner_right_52_52.svg');
-  cursor: pointer;
+  cursor: pointer; */
+  z-index: 300;
 }
 .left_arrow {
   position: absolute;
-  top: 150px;
+  width: 52px;
+  height: 52px;
+  /* top: 150px;
   left: 250px;
   background-color: transparent;
   background-image: url(https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_banner_left_52_52.svg);
   border: none;
-  width: 52px;
-  height: 52px;
-  cursor: pointer;
+  cursor: pointer; */
+  z-index: 300;
 }
 #slide_count {
   position: absolute;
@@ -169,37 +275,18 @@ section {
   /* display: flex; */
   /* flex-direction: column; */
 }
-.gallery_wrap {
+/* .gallery_wrap {
   position: relative;
   width: 1050px;
   margin: 0 auto; /* block 상태일때 */
 
   /* justify-content: center; */
   /* text-align: center; inline 일 때*/
-  /* background-color: green; */
+  /* background-color: green; 
   
-}
-.gallery_wrap .section_left_btn {
-  position: absolute;
-  left:-45px;
-  top:135px;
-  z-index: 300;
-  /* opacity: 0.6; */
-  cursor: pointer;
-}
-.gallery_wrap .section_right_btn {
-  position: absolute;
-  right:-45px;
-  top:135px;
-  z-index: 300;
-  /* opacity: 0.6; */
-  cursor: pointer;
-}
-.gallery {
-  display: flex;
-  justify-content: center;
-  /* background-color: yellow; */
-}
+} */
+/* 
+
 .item{
   position: relative;
   padding: 0;
@@ -208,79 +295,8 @@ section {
   border-radius: 5%;
   box-shadow: 5px 5px 5px gray;
   background-color: white
-}
+} */
 
-.shopping_cart {
-  position: absolute;
-  right:20px;
-  bottom: 75px;
-}
-.shopping_cart_icon {
- background-color: transparent;
- opacity: 0.8;
- border: none;
-}
-.shopping_cart_icon img {
-  height: 55px;
-  width: 55px;
-  transition: all .2s ease-in-out
-}
-.shopping_cart_icon img:hover {
-  cursor: pointer;
-  transform: scale(1.05);
-}
-
-.thumbnail {
-  width: 250px;
-  height: 320px;
-  overflow: hidden;
-  border-bottom: solid 3px #333;
-  /* border: solid 3px #333;
-  border-radius: 5%;
-  box-shadow: 5px 5px 5px gray; */
-}
-
-.thumbnail a {
-  
-}
-.thumbnail a img {
-  height: 100%;
-  width: 100%;
-  transition: all .3s ease-in-out;
-  
-  /* box-shadow: 10px 5px 5px gray; */
-  /* width: 500px; */
-}
-.thumbnail img:hover {
-  transform: scale(1.1);
-
-}
-
-.description {
-  padding: 14px 10px 0 0;
-  text-align: center;
-  
-}
-.description_text {
-  font-size: 16px;
-  font-weight: 600;
-  display: block;
-  margin: 0 0 8px 0;
-}
-.description_text a{
-  color: rgb(76, 76, 76);
-}
-.description_text a:hover{
-  color: #68a790;
-  text-decoration: underline;
-}
-
-.price {
-  font-size: 16px;
-  font-weight: 700;
-  display: block;
-  color: #4c4c4c
-}
 
 
 /* .landing {
@@ -389,36 +405,120 @@ section {
 }
 
 
-/* swiper css */
-.swiper {
+swiper css
+.gallery_wrap {
+  /* width: 100%;
+  height: 100%; */
+  position: relative;
   width: 100%;
-  height: 100%;
+  margin: 0 auto; /* block 상태일때 */
+
+  /* justify-content: center; */
+  /* text-align: center; inline 일 때*/
+  /* background-color: green; */
 }
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  /* background-color: red; */
-
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
+.gallery_wrap .section_left_btn {
+  position: absolute;
+  left:-45px;
+  top:135px;
+  z-index: 300;
+  /* opacity: 0.6; */
+  cursor: pointer;
+}
+.gallery_wrap .section_left_btn img {
+  content: url('https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_left_60_60.svg');
+}
+.gallery_wrap .section_right_btn {
+  position: absolute;
+  right:-45px;
+  top:135px;
+  z-index: 300;
+  /* opacity: 0.6; */
+  cursor: pointer;
+}
+.gallery_wrap .section_right_btn img {
+  content: url('https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_right_over_60_60.svg');
+}
+.gallery {
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
+  /* background-color: yellow; */
 }
+.item {
+  position: relative;
+  padding: 0;
+  margin: 0 9px;
+  border: solid 3px #333;
+  border-radius: 5%;
+  box-shadow: 5px 5px 5px gray;
+  background-color: white;
+  width: 250px;
+  height: 320px;
 
-.swiper-slide img {
+}
+.thumbnail {
+  width: 250px;
+  height: 320px;
+  overflow: hidden;
+  border-bottom: solid 3px #333;
+  /* border: solid 3px #333;
+  border-radius: 5%;
+  box-shadow: 5px 5px 5px gray; */
+}
+.item.thumbnail a img {
+  content: url('https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg');
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: all .3s ease-in-out;
+}
+.item.thumbnail img:hover {
+  transform: scale(1.1);
+
+}
+.description {
+  padding: 14px 10px 0 0;
+  text-align: center;
+  
+}
+.description_text {
+  font-size: 16px;
+  font-weight: 600;
+  display: block;
+  margin: 0 0 8px 0;
+}
+.description_text a{
+  color: rgb(76, 76, 76);
+}
+.description_text a:hover{
+  color: #68a790;
+  text-decoration: underline;
+}
+
+.price {
+  font-size: 16px;
+  font-weight: 700;
+  display: block;
+  color: #4c4c4c
+}
+
+.shopping_cart {
+  position: absolute;
+  right:20px;
+  bottom: 75px;
+}
+.shopping_cart_icon {
+ background-color: transparent;
+ opacity: 0.8;
+ border: none;
+}
+.shopping_cart_icon img {
+  height: 55px;
+  width: 55px;
+  transition: all .2s ease-in-out
+}
+.shopping_cart_icon img:hover {
+  cursor: pointer;
+  transform: scale(1.05);
 }
