--- a/src/views/meat/meat.html
+++ b/src/views/meat/meat.html
@@ -27,7 +27,6 @@
   </head>
 
 <body>
-    <div id="category">meat</div>
     <div id="header">
         <nav class="navbar" role="navigation" aria-label="main navigation">
           <div class="container mt-3">
@@ -90,7 +89,6 @@
             </ul>
           </div>
             
-  
           <div class="search">
             <input type="text" placeholder="검색어를 입력해주세요" class="search_box">
             <div id="search_btn">
@@ -98,10 +96,7 @@
               <!-- search icon -->
             </div>
           </div>
-  
-        </div>
-        
-   
+        </div>   
       </div>
 
       <!-- main -->
@@ -110,25 +105,7 @@
         <h1 class="title">고기</h1>
       </div>
       <div id="list_products">
-        <div id="inner_list_products">
-              <!-- <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div> -->
-        </div>
+        <div id="inner_list_products"></div>
       </div>
     </section>
     
