--- a/src/views/admin-product-list/admin-product-list.html
+++ b/src/views/admin-product-list/admin-product-list.html
@@ -110,10 +110,10 @@
     <section class="container">
         <div class="inner_container">
           <div class="block account-header">
-            <h1 class="subtitle is-4">제품 목록</h1>
+            <h1>제품 목록</h1>
           </div>
           <div class="product_list_container">
-              <p class="title is-5 has-text-primary">현재 판매 중인 제품 목록입니다.</p>
+              <p>현재 판매 중인 제품 목록입니다.</p>
               <div class="btn_add_container">
                 <button id="btn_add" onclick="location.href='../../../product/add'">제품 추가하기</button>
               </div>
