--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -107,7 +107,9 @@
     </div>
         <section class="container">
             <div class="container_title">
-                my page
+                <div class="hi">안녕하세요,</div>
+                <div class="name"></div>
+                <div class="sir">님</div>
             </div>
             <div class="inner_container">
                 <div class="button_container">
