--- a/src/views/admin-category-manage/admin-category-manage.html
+++ b/src/views/admin-category-manage/admin-category-manage.html
@@ -110,10 +110,10 @@
     <section class="container">
         <div class="inner_container">
           <div class="block account-header">
-            <h1 class="title is-4">카테고리 목록</h1>
+            <h1>카테고리 목록</h1>
           </div>
           <div class="category_list_container">
-              <p class="subtitle is-6">현재 카테고리 목록입니다.</p>
+              <p>현재 카테고리 목록입니다.</p>
 
               <!-- 카테고리 추가 구역-->
               <div class="add_zone">
