--- a/src/views/product-add/product-add.html
+++ b/src/views/product-add/product-add.html
@@ -89,6 +89,30 @@
               </div>
             </div>
 
+            <div class="field is-fullwidth">
+              <label class="label" for="product_img">제품 사진</label>
+              <div class="file has-name is-fullwidth">
+                <label class="file-label">
+                  <input
+                    class="file-input"
+                    id="product_img"
+                    type="file"
+                    name="image-file"
+                    accept=".png, .jpeg, .jpg"
+                  />
+                  <span class="file-cta">
+                    <span class="file-icon">
+                      <i class="fas fa-upload"></i>
+                    </span>
+                    <span class="file-label"> 사진 업로드 </span>
+                  </span>
+                  <span class="file-name" id="span_file_name">
+                    사진파일 (png, jpg, jpeg)
+                  </span>
+                </label>
+              </div>
+            </div>
+            
             <!-- 제품 가격 -->
             <div class="field">
               <label class="label" for="product_price">가격</label>
